# vibe-kanban-tutorial

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: todos.py
docs/: design.md
tests/: test_todos.py
