[project]
name = "todo-app"
version = "0.1.0"
description = "A Python TODO application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "TRY", "EM", "FA", "SIM108", "S101", "RET505", "TCH002"]

[dependency-groups]
dev = [
    "httpx==0.25.1",
    "mypy>=1.17.1",
    "pytest==7.4.3",
    "ruff>=0.12.12",
]
